refactoring styles - section and header

--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -8,17 +8,17 @@
     <div class="main">
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/astryh/', studentId]">
+                    <mat-card-header [routerLink]="['/astryh']">
                         <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming (1954) - 6min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/balke/', studentId]">
+                    <mat-card-header [routerLink]="['/balke']">
                         <mat-card-subtitle i18n="Subtitle">Balke e Ware (1954) - feminino</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/ymca/', studentId]">
+                    <mat-card-header [routerLink]="['/ymca']">
                         <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning (1989) - masculino</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
