--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
@@ -8,17 +8,17 @@
     <div class="main">
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/rock/', studentId]">
+                    <mat-card-header [routerLink]="['/rock']">
                         <mat-card-subtitle i18n="Subtitle">Rockport (1987) - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/ukk/', studentId]">
+                    <mat-card-header [routerLink]="['/ukk']">
                         <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br/>Kukkonen-Harjula et Al, 1998 -2000m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/cureton/', studentId]">
+                    <mat-card-header [routerLink]="['/cureton']">
                         <mat-card-subtitle i18n="Subtitle">Cureton et Al, (1954) - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
