--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.html
@@ -8,17 +8,17 @@
     <div class="main">
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/rock/', studentId]">
+                    <mat-card-header [routerLink]="['/rock']">
                         <mat-card-subtitle i18n="Subtitle">Cooper (1968) - 12min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/george/', studentId]">
+                    <mat-card-header [routerLink]="['/george']">
                         <mat-card-subtitle i18n="Subtitle">George et Al (1993) - 1609m</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/george2/', studentId]">
+                    <mat-card-header [routerLink]="['/george2']">
                         <mat-card-subtitle i18n="Subtitle">George et Al (1993) - 3min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
