--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -167,6 +167,8 @@
                         </button>
                     </div>
                 </form>
+                <div style="height: 200px;" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">&nbsp;
+                </div>
             </mat-tab>
             <!-- Vista Lateral -->
             <mat-tab i18n label="Vista Lateral">
@@ -559,6 +561,8 @@
                         </button>
                     </div>
                 </form>
+                <div style="height: 200px;" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">&nbsp;
+                </div>
             </mat-tab>
             <!--   FOTOS -->
             <mat-tab i18n label="Fotos">
