--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
@@ -5,25 +5,25 @@
 
     <div class="main">
         <mat-card>
-            <mat-card-header [routerLink]="['/goniometro/', studentId]">
+            <mat-card-header [routerLink]="['/goniometro/']">
                 <mat-card-subtitle i18n="Subtitle">Goniómetro
                 </mat-card-subtitle>
             </mat-card-header>
         </mat-card>
         <mat-card>
-            <mat-card-header [routerLink]="['/fleximetro/', studentId]">
+            <mat-card-header [routerLink]="['/fleximetro/']">
                 <mat-card-subtitle i18n="Subtitle">Flexímetro
                 </mat-card-subtitle>
             </mat-card-header>
         </mat-card>
         <mat-card>
-            <mat-card-header [routerLink]="['/flexiteste/', studentId]">
+            <mat-card-header [routerLink]="['/flexiteste/']">
                 <mat-card-subtitle i18n="Subtitle">Flexiteste
                 </mat-card-subtitle>
             </mat-card-header>
         </mat-card>
         <mat-card>
-            <mat-card-header [routerLink]="['/bwd/', studentId]">
+            <mat-card-header [routerLink]="['/bwd/']">
                 <mat-card-subtitle i18n="Subtitle">Banco de Wells & Dillon (adaptado)
                 </mat-card-subtitle>
             </mat-card-header>
