--- a/src/app/avaliation/CardioPulmunar/teste-outros/teste-outros.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-outros/teste-outros.component.html
@@ -8,12 +8,12 @@
     <div class="main">
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/banco/', studentId]">
+                    <mat-card-header [routerLink]="['/banco']">
                         <mat-card-subtitle i18n="Subtitle">Banco - Katch & McArdle (1984) - 3min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/natacao/', studentId]">
+                    <mat-card-header [routerLink]="['/natacao']">
                         <mat-card-subtitle i18n="Subtitle">Natação - Nado Crawl na piscina - 12min</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
