--- a/src/app/avaliation/frm/frm.component.scss
+++ b/src/app/avaliation/frm/frm.component.scss
@@ -1,11 +1,11 @@
 .section{
-    position: absolute;
+/*     position: absolute;
     width: 100%;
     height: 75%;
     padding: 10px;
     height: 75vh;
     bottom: 8%;
-    overflow: auto;
+    overflow: auto; */
 
     table{
       width: 100%;
