--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header">
-    <h1 class="header-title" i18n>Anamenese</h1>
+    <h1 class="header-title" i18n>Anamnese</h1>
   </div>
 
   <div class="section">
