--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -3,7 +3,7 @@
         <h3>Composição Corporal</h3>
     </div>
 
-    <div class="main">
+    <div class="section">
         <mat-accordion>
             <mat-expansion-panel class="accordion" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
