--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="section">
-        <form #f="ngForm" (submit)="save(f.value)">
+        <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
             <mat-card>
                 <mat-card-header>
                     <mat-card-subtitle i18n>Pressão Arterial(mm/Hg)</mat-card-subtitle>
