--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -3,7 +3,7 @@
         <h1 i18n="Title">Avaliações</h1>
     </div>
 
-    <div class="main">
+    <div class="section">
         <mat-accordion>
             <mat-expansion-panel class="accordion">
                 <mat-expansion-panel-header [routerLink]="['/eval']">
