--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -1,13 +1,7 @@
-.section {
-/*   position: absolute;
-  width: 98%;
-  padding: 10px;
-  height: 80vh;
-  bottom: 8%;
-  overflow: auto;
-  display: flex-start;
-  flex-direction: column;
-  align-items: stretch; */
+@media only screen and (min-width: 768px) {
+  .section {
+    width: 80%;
+  }
 }
 table {
   width: 98%;
