--- a/src/app/avaliation/composicao-corporal/cc.component.scss
+++ b/src/app/avaliation/composicao-corporal/cc.component.scss
@@ -1,67 +1,30 @@
 .container{
-    position: relative;
- /*    background-image: url("../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+    background-image: url("../../../assets/img/dobras1.jpg");
     background-repeat: no-repeat;
     background-blend-mode: normal;
     background-size: cover;
     background-position: center; 
-    background-color:  rgba(247, 238, 238, 0.704);*/
-    height: 94vh;
-    overflow: auto;
   }
 
-  .main{
-      width: 90%;
-      height: 70%;
-      position: absolute;
-      bottom: 8%;
-      display: flex;
-      flex-direction: column-reverse;
-      left: 50%;
-      overflow: auto;
-      transform: translate(-50%,0);
-
       mat-expansion-panel{
-        background-color: rgba(247, 248, 238, 0.704);
+        background-color: rgba(247, 248, 238, 0.604);
         border-radius: 4px;
       }
-      .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover{
-          // background-color: rgba(51, 48, 48, 0.904);
-      }
-      mat-expansion-panel-header {
-      //  background-color: rgba(51, 48, 48, 0.904);      
-      }
-      
       mat-expansion-panel-body {
         padding: 0;
       }
-
-      mat-expansion-panel-content{
-      //  background-color: rgba(51, 48, 48, 0.904);
-      }
-
-
-
-      mat-panel-title{
-      //  color: white;
-    }
     .mat-card{
         height: 30px;
-      //  background-color: rgba(14, 13, 13, 0.904);
         margin-bottom: 1px;
-        .mat-card-subtitle{
-       //    color: white; 
-        }
-        
     }
 
-  }
 
-.footer{
-  position: absolute;
-  bottom: 1%;
-  left: 50%;
-  transform: translateX(-50%);
-
-}
-  
+    @media only screen and (min-width: 768px) {
+      .section {
+        width: 50%;
+      }
+      ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; /* make scrollbar transparent */
+      }
+    }
