--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -4,107 +4,108 @@
     </div>
 
     <div class="section">
-                <form #f="ngForm" (submit)="save(f.value)">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].dt_avaliacao | date:'dd-LL-yyyy'}}</th>
-                                <th class="th-top" *ngIf="addEval">
-                                    <input name="dt_avaliacao" #dt_avaliacao="ngModel" [(ngModel)]="newEvaluation.dt_avaliacao" type="date"
-                                        style="width: 110px;">
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th><span>Avaliador</span></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].avaliador}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].avaliador}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="avaliador" #avaliador="ngModel" [(ngModel)]="newEvaluation.avaliador"
-                                         type="text" style="width: 110px">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Estatura <small>(m)</small></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].altura}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura"
-                                        type="number" placeholder="m">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Peso <small>(Kg)</small></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso"
-                                        type="number" step="0.1" placeholder="Kg">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Evergadura <small>(cm)</small></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].envergadura}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].envergadura}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="envergadura" #envergadura="ngModel" [(ngModel)]="newEvaluation.envergadura"
-                                        type="number" step="0.1">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Pressão Arterial<br/>em Repouso <small>(mm/Hg)</small></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].tamax}} - {{evaluation[pointer-1].tamin}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].tamax}} - {{evaluation[pointer].tamin}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="tamax" #tamax="ngModel" [(ngModel)]="newEvaluation.tamax"
-                                        type="number" step="0.1" placeholder="max"> - 
-                                    <input name="tamin" #tamin="ngModel" [(ngModel)]="newEvaluation.tamin"
-                                        type="number" step="0.1" placeholder="min">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Frequência Cardiaca<br/>em Repouso <small>(bpm)</small></th>
-                                <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
-                                <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc"
-                                        type="number" step="0.1">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>TMB - Taxa Metabólica<br/>Basal <small>(kCal/dia)</small></th>
-                                <td *ngIf="pointer>=1">{{calcTMB(evaluation[pointer-1])}}</td>
-                                <td *ngIf="pointer>=0">{{calcTMB(evaluation[pointer])}}</td>
-                                <td *ngIf="addEval">
-                                    <input name="fc" #fc="ngModel" [ngModel] [value]="calcTMB(newEvaluation)" readonly>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <table>
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].dt_avaliacao | date:'dd-LL-yyyy'}}
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].dt_avaliacao | date:'dd-LL-yyyy'}}
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="dt_avaliacao" #dt_avaliacao="ngModel" [(ngModel)]="newEvaluation.dt_avaliacao"
+                                type="date" style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th><span>Avaliador</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].avaliador}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].avaliador}}</td>
+                        <td *ngIf="addEval">
+                            <input name="avaliador" #avaliador="ngModel" [(ngModel)]="newEvaluation.avaliador"
+                                type="text" style="width: 110px">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Estatura <small>(m)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].altura}}</td>
+                        <td *ngIf="addEval">
+                            <input name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura" type="number"
+                                placeholder="m">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Peso <small>(Kg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number" step="0.1"
+                                placeholder="Kg">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Evergadura <small>(cm)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].envergadura}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].envergadura}}</td>
+                        <td *ngIf="addEval">
+                            <input name="envergadura" #envergadura="ngModel" [(ngModel)]="newEvaluation.envergadura"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Pressão Arterial<br />em Repouso <small>(mm/Hg)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tamax}} - {{evaluation[pointer-1].tamin}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tamax}} - {{evaluation[pointer].tamin}}</td>
+                        <td *ngIf="addEval">
+                            <input name="tamax" #tamax="ngModel" [(ngModel)]="newEvaluation.tamax" type="number"
+                                step="0.1" placeholder="max"> -
+                            <input name="tamin" #tamin="ngModel" [(ngModel)]="newEvaluation.tamin" type="number"
+                                step="0.1" placeholder="min">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Frequência Cardiaca<br />em Repouso <small>(bpm)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
+                        <td *ngIf="addEval">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>TMB - Taxa Metabólica<br />Basal <small>(kCal/dia)</small></th>
+                        <td *ngIf="pointer>=1">{{calcTMB(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{calcTMB(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">
+                            <input name="fc" #fc="ngModel" [ngModel] [value]="calcTMB(newEvaluation)" readonly>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-                    <div class="action">
-                        <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                            (click)="pointer=pointer-1">
-                            <mat-icon class="mat-14">chevron_left</mat-icon>
-                        </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                            <mat-icon class="mat-18">add</mat-icon>
-                        </button>
-                        <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                            color="default" (click)="pointer=pointer+1">
-                            <mat-icon class="mat-14">chevron_right</mat-icon>
-                        </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                            <mat-icon class="mat-18">close</mat-icon>
-                        </button>
-                        <button *ngIf="addEval" mat-fab>
-                            <mat-icon class="mat-18">check</mat-icon>
-                        </button>
-                    </div>
-                </form>
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
 
 
     </div>
@@ -115,4 +116,3 @@
         </button>
     </div>
 </div>
-
