--- a/src/app/avaliation/evaluation/evaluation.component.scss
+++ b/src/app/avaliation/evaluation/evaluation.component.scss
@@ -1,32 +1,47 @@
-.section{
+.container {
+  background-image: url("../../../assets/img/measurement-1698856.jpg");
+  background-repeat: no-repeat;
+  background-blend-mode: normal;
+  background-size: cover;
+  background-position: center;
+}
 
-    table{
-      width: 100%;
-    }
-    th, td{
-      height: 28px;
-     // background-color: blanchedalmond;
-      border-bottom: 1px #999 solid;
-      text-align: center;
-    }
-    th{
-        font-weight: 500 !important;
-        text-align: left;
-        padding-left: 5px;
-    }
-    .th-top{
-        text-align: center;
-    }
-    td>input{
-      width: 60px;
-    }
-  
-    .action{
-        width: 260px;
-        margin: auto;
-        margin-top: 5px;
-        display: flex;
-        justify-content: space-around;
-  
-    }
+form {
+  background-color: rgba(245, 253, 245, 0.704);
+  border-radius: 10px;
+  padding: 15px;
+}
+
+
+th,
+td {
+  height: 28px;
+  // background-color: blanchedalmond;
+  border-bottom: 1px #999 solid;
+  text-align: center;
+}
+th {
+  font-weight: 500 !important;
+  text-align: left;
+  padding-left: 5px;
+}
+.th-top {
+  text-align: center;
+}
+td > input {
+  width: 60px;
+}
+
+.action {
+  width: 260px;
+  margin: auto;
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-around;
+}
+
+@media only screen and (min-width: 768px) {
+  table{
+    width: 100%;
+  }
 }
