--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -1,46 +1,47 @@
-.header{
-    h1{
+.header {
+    h1 {
         font-size: 16px;
     }
-
 }
 
-.section{
-    .mat-list-item{
-        position: relative;
-        height: 100px;
-        width: 96%;
-        display: flex;
-        flex-direction: row;
-        justify-items: space-between;
+.mat-card{
+    margin-bottom: 4px;
+}
+.flex-radio-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.mat-radio-group{
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+}
+.action {
+    width: 100%;
+    text-align: center;
+}
+em {
+    font-size: x-small;
+}
 
 
 
-        p{
-            font-size: smaller;
-            width: 74%;
-            text-align: start;
-            padding-right: 25px;
-        }
-
-        .mat-radio-group{
-            width: 70px;
-            margin-right: 8px;
-        }
-
+@media only screen and (min-width: 768px) {
+    .container {
+        background-image: url("../../../../assets/img/CON 012.JPG");
+        background-repeat: no-repeat;
+        background-blend-mode: normal;
+        background-size: cover;
+        background-position: center; 
+    }
+    .section {
+        width: 60%;
     }
 
-    .mat-list-item:last-child{
-        height: 60px;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        .action{
-            width: 100%;
-            text-align: center;
-        }
-        em{
-            font-size: x-small;
-        }
+
+    ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; /* make scrollbar transparent */
     }
 }
