--- a/src/app/commun/menu/menu.component.scss
+++ b/src/app/commun/menu/menu.component.scss
@@ -1,3 +1,12 @@
+.menu-toolbar{
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .menu-toolbar{
+    width: 60vw;
+    margin: auto;
+  }
+}
 .menu-icon {
     padding: 0 14px;
   }
